# McBuild

./: .gitignore  CONTRIBUTING.md  McEngine.build  McEngine.diff  McOsu.build  McOsu.diff  README.md  WAIVER  custom-packages.nix  flake.nix  meson_options.txt  prepare.sh
libbass/: default.nix
